[package]
name = "rid"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

[workspace]
members=[
  "rid-build",
  "rid-common",
  "rid-ffi",
  "rid-macro",
  "rid-macro-impl",
]
exclude = [ 
  "examples/dart/clock",
  "examples/dart/todo",
  "examples/dart/wip",
  "tests/dart/field_access"
]

[dependencies]
rid_macro = { path = "rid-macro" }
rid_ffi = { path = "rid-ffi" }
