[package]
name = "rid_build"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
rid_common = { path = "../rid-common" }
rid_ffi = { path = "../rid-ffi" }
cbindgen = "0.18.0"
anyhow = "1.0.38"
simple_logger = "1.11.0"
log = "0.4.14"
