[package]
name = "rid_macro"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

[lib]
proc-macro = true
doctest=false

# [[bin]]
# name = "main"
# path = "src/main.rs"
 
[dependencies]
rid_macro_impl = { path = "../rid-macro-impl" }

# extra traits only needed to print debug info in development
syn = { version = "1.0.60", features = ["extra-traits", "full"] }
quote = "1.0.9"
proc-macro-error = "1.0.4"

[dev-dependencies]
macrotest = "1"
