[package]
name = "clock"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

[lib]
name = "clock"
crate-type = ["cdylib"]
path = "src/lib.rs"
doctest = false
test = false

[[bin]]
name = "rid_build"
path = "rid_build.rs"

[dependencies]
rid = { path = "../../../" }
rid_build = { path = "../../../rid-build" }
lazy_static = "1.4.0"
# TODO upgrade and adapt to new API
tokio = { version = "0.2", features = ["rt-threaded"] }
allo-isolate = "0.1.7"

[build-dependencies]
rid_build = { path = "../../../rid-build" }
