[package]
name = "clock"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

[lib]
name = "clock"
crate-type = ["cdylib"]
path = "src/lib.rs"
doctest = false
test = false

[[bin]]
name = "rid_build"
path = "rid_build.rs"

[dependencies]
rid = { path = "../../../" }
rid_build = { path = "../../../rid-build" }
lazy_static = "1.4.0"
allo-isolate = "0.1.7"
tokio = { version = "1.2.0", features = [ "rt-multi-thread" ] }

[build-dependencies]
rid_build = { path = "../../../rid-build" }
