[package]
name = "todo"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

[lib]
name = "todo"
crate-type = ["cdylib"]
path = "src/app.rs"

[[bin]]
name = "rid_build"
path = "rid_build.rs"

[dependencies]
rid = { path = "../../../" }
rid_build = { path = "../../../rid-build" }
log = "0.4.14"
env_logger = "0.8.3"

[build-dependencies]
rid_build = { path = "../../../rid-build" }
